# poc_htmx

./: .gitignore  db.sqlite3  pyproject.toml
core/: settings.py  urls.py  views.py
templates/core/: base.html  index.html  messages.html
